# Q-A-Chatbot-using-Gemini-with-chat_history

./: README.md  app.py  pyproject.toml
.github/workflows/: main.yml
